[package]
name = "feedgrep-search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1"
walkdir = "2.5"
zstd = "0.13"
